--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
   html {
       box-sizing: border-box;
@@ -25,4 +25,33 @@
     border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.4);
     box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.2);
+  }
+
+  .quote-text {
+    font-size: 2.75rem; /* rem is the relative size compared to the root element */
+  }
+
+  .long-quote {
+    font-size: 2rem;
+  }
+
+  .fa-quote-left {
+    font-size: 4rem;
+  }
+
+  .quote-author {
+    margin-top: 15px;
+    font-size: 2rem;
+    font-weight: 400;
+    font-style: italic;
+  }
+
+  @media screen and (max-width: 1000px) {
+    .quote-container {
+      margin: auto 10px;
+    }
+
+    .quote-text {
+      font-size: 2.5rem;
+    }
   }
